Updated non-game part of project

--- a/Cadre/Cerveau/package.json
+++ b/Cadre/Cerveau/package.json
@@ -30,17 +30,22 @@
     "chess.js": "0.10.2",
     "delay": "4.1.0",
     "dotenv": "6.1.0",
+    "ecstatic": "^4.1.2",
     "express": "4.16.4",
     "express-handlebars": "3.0.0",
     "fs-extra": "7.0.0",
+    "fstream": "^1.0.12",
     "gaussian": "1.1.0",
     "json5": "2.1.0",
     "lark-websocket": "github:JacobFischer/lark-websocket.git#95a4947ee1b20bc3ae8155f3c405d61fcc1f97d9",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
+    "marked": "^0.7.0",
+    "mem": "^5.1.1",
     "moment": "2.22.2",
     "npm": "^6.4.1",
     "sanitize-filename": "1.6.1",
     "seedrandom": "2.4.4",
+    "tar": "^4.4.10",
     "ts-node": "7.0.1",
     "ts-typed-events": "1.1.1",
     "tsconfig-paths": "3.6.0",
